# copilotkit

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  Makefile  README.md  docker-entrypoint.sh
.claude/: settings.local.json
client/: Makefile  bff.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml
client/server/: index.ts
client/src/: App.module.css  App.tsx  main.tsx  routeTree.gen.ts
client/src/routes/: __root.tsx  index.module.css  index.tsx  square-color.module.css  square-color.tsx
scripts/: start-services.sh
server/: .env.example  AGENT_EXPLANATION.md  Makefile  agent.py  pyproject.toml  server.py  server.ts  server_simple.py
