[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ag-ui-langgraph>=0.0.17",
    "copilotkit>=0.1.69",
    "fastapi>=0.115.14",
    "langchain>=0.3,<1.0",
    "langchain-openai>=0.2,<1.0",
    "langgraph>=1.0.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.37.0",
]
